assets/css/styles.css
/* ... */
.app .controls a:hover {
    opacity: 1;
}

.app .controls a.disabled {
    background-color: #555;
    opacity: 0.5;
    cursor: default;
    pointer-events: none;
}

.app .controls a.disabled:hover {
    opacity: 0.5;
}

.app .controls a i {
    font-size: 18px;
}

.app .controls #take-photo i {
    font-size: 32px;
}

.app canvas {
    display: none;
}

.app video#camera-stream.visible,
.app img#snap.visible,
.app #error-message.visible {
    display: block;
}

.app .controls.visible {
    display: flex;
}

@media(max-width: 1000px) {
    .promo .container {
        margin-bottom: 0;
    }
    .container {
        margin: 20px 40px;
    }
    .footer-adjust {
        width: 90% !important;
    }
    .app #start-camera.visible {
        display: block;
    }
    .app .controls a i {
        font-size: 16px;
    }
    .app .controls #take-photo i {
        font-size: 24px;
    }
}

@media(max-width: 600px) {
    .container {
        margin: 10px;
    }
    .app #error-message {
        padding: 80px 50px;
        font-size: 18px;
    }
    .app .controls a i {
        font-size: 12px;
    }
    .app .controls #take-photo i {
        font-size: 18px;
    }
    #snapYou {
      top: 50px;
    }
}


/* Login Popup Modal */

.close {
    position: absolute;
    right: 15px;
    top: 0;
    font-size: 35px;
}

.close:focus {
    outline: none;
}

.modal {
    z-index: 9999 !important;
    top: 75px;
}

.loginmodal-container {
    padding: 30px;
    max-width: 350px;
    width: 100% !important;
    background-color: #F7F7F7;
    margin: 0 auto;
    border-radius: 2px;
    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
    overflow: hidden;
    position: absolute;
    right: 0;
    left: 0;
    color: #444444;
}

.loginmodal-container h1 {
    text-align: center;
    font-weight: 500;
    font-size: 1.5em;
}

.loginmodal-container input[type=submit] {
    width: 100%;
    display: block;
    margin-bottom: 10px;
    position: relative;
}

.loginmodal-container input[type=email],
input[type=password] {
    height: 44px;
    font-size: 16px;
    width: 100%;
    margin-bottom: 10px;
    -webkit-appearance: none;
    background: #fff;
    border: 1px solid #d9d9d9;
    border-top: 1px solid #c0c0c0;
    /* border-radius: 2px; */
    padding: 0 8px;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
}

.loginmodal-container input[type=email]:hover,
input[type=password]:hover {
    border: 1px solid #b9b9b9;
    border-top: 1px solid #a0a0a0;
    -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
    -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
}

.loginmodal {
    font-size: 14px;
    font-weight: 700;
    height: 36px;
    padding: 0 8px;
    /* border-radius: 3px; */
    /* -webkit-user-select: none;
  user-select: none; */
}

.loginmodal-submit {
    /* border: 1px solid #3079ed; */
    border: 0px;
    color: white;
    text-shadow: 0 1px rgba(0, 0, 0, 0.1);
    background-color: #1b6ab0;
    padding: 13px 20px;
    font-size: 14px;
    /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#4787ed)); */
}

.loginmodal-submit:hover {
    color: #fff;
    border: 0px;
    text-shadow: 0 1px rgba(0, 0, 0, 0.3);
    background-color: #134e81;
    /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#357ae8)); */
}

.loginmodal-container a {
    text-decoration: none;
    color: #666;
    font-weight: 400;
    text-align: center;
    display: inline-block;
    opacity: 0.6;
    transition: opacity ease 0.5s;
}

.login-help {
    float: left;
    font-size: 12px;
}

@media(max-width: 768px) {
    #profileForm {
        width: 100%;
        text-align: left;
        margin: 0 auto;
    }
    .overlay-advice {
        width: 75%;
    }
    .box {
        width: 75%;
        margin-left: -37.5%;
    }
    .controls {
        width: 80% !important;
        margin-left: 10% !important;
        padding: 0 0 5px 0 !important;
    }
    .footer {
        display: none;
    }
    #snapYou {
      width: 100%;
      left:25%;
      position: fixed;
      top: 80px;
    }
}

/* Extra small devices (phones, less than 768px) */

@media (max-width: 767px) {
    .header .main-nav button {
        margin-right: 0;
    }
    .header .main-nav .navbar-collapse {
        padding-left: 15px;
        padding-right: 15px;
    }
    .promo .btns .btn {
        margin-right: 0;
        clear: both;
        display: block;
        margin-bottom: 30px;
    }
    .promo .title {
        font-size: 66px;
    }
    .promo .meta {
        margin-top: 60px;
    }
    .promo .meta li {
        float: none;
        display: block;
        margin-bottom: 5px;
    }
    .contact .author-message {
        text-align: center;
    }
    .contact .author-message .profile {
        position: static;
        margin: 0 auto;
        margin-bottom: 30px;
    }
    .contact .author-message .speech-bubble {
        margin-left: 0;
    }
    .contact .author-message .speech-bubble:after {
        display: none;
    }
    .contact .social-icons a {
        width: 36px;
        height: 36px;
        padding-top: 7px;
        margin-right: 2px;
    }
    .contact .social-icons a .fa:before {
        font-size: 18px;
    }
}

/* Hide nav bar toggle on med-lg screens*/

@media (min-width: 767px) {
    #navBarToggle {
        display: none !important;
    }
}

@media (max-width: 640px) {
    .hideOn640 {
        display: none;
    }
}

#appContainer {
    overflow: hidden;
    /*  overflow-y: auto;*/
    position: absolute;
    margin: 100px 0 0 0;
    padding: 50px 0 0 0;
    width: 100%;
    height: 100%;
}

.box {
    position: absolute;
    width: 50%;
    /*    height: 300px;
    line-height: 300px;
    top: 100px; 
    font-size: 50px; */
    text-align: center;
    border: 2px solid black;
    left: 50%;
    margin-left: -25%;
    padding-right: 0 !important;
    padding-left: 0 !important;
}
/* ... */

